fix: avoid newer String runtime APIs